--- a/source/phonegap/platforms/android/assets/www/index.html
+++ b/source/phonegap/platforms/android/assets/www/index.html
@@ -61,6 +61,7 @@
         <script src="js/chatroom/chats.js"></script>
         <script src="js/chatroom/chatroom.js"></script>
         <script src="js/chatroom/chat_star.js"></script>
+        <script src="js/chatroom/emoticon_add.js"></script>  
 
         <script src="js/mission/mission_edit.js"></script>
         <script src="js/mission/mission_attach.js"></script>
