--- a/source/phonegap/platforms/ios/www/index.html
+++ b/source/phonegap/platforms/ios/www/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+        <meta http-equiv="Content-Security-Policy" content="default-src * data: blob: 'unsafe-inline' 'unsafe-eval' ws: wss:;">
         <title></title>
 
         <!-- compiled css output -->
@@ -64,6 +64,7 @@
         <script src="js/chatroom/emoticon_add.js"></script>  
 
         <script src="js/mission/mission_edit.js"></script>
+        <script src="js/mission/mission_summary.js"></script>
         <script src="js/mission/mission_attach.js"></script>
         <script src="js/mission/mission_member.js"></script>
 
