--- a/source/app/client/index.html
+++ b/source/app/client/index.html
@@ -19,6 +19,14 @@
         <link rel="apple-touch-icon-precompsed" href="images/webapp.png">
         <link rel="apple-touch-startup-image" href="images/webapp.png">
 
+        <meta name="thumbnail" content="images/logo_1024.png">
+        <meta property="og:title" content="ハンドクラウド">
+        <meta property="og:image" content="images/logo_1024.png">
+        <meta property="og:description" content="ハンドクラウド(HandCrowd）は、仕事を分解しフローにすることで個人やチームの業務改善をサポートするクラウド型ToDoリスト">
+        <meta property="og:url" content="https://www.handcrowd.com/app">
+
+        <link rel="alternate" href="android-app://com.reflux.HandCrowd/handcrowd/invite_home" />
+        <link rel="alternate" href="android-app://com.reflux.HandCrowd/handcrowd/invite_chat" />
     </head>
     <body data-ng-app="app" id="app" data-custom-background>
         <!--[if lt IE 9]>
@@ -105,6 +113,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/nav.js"></script>
         <script src="scripts/main.js"></script>
+        <script src="scripts/qr.js"></script>
         <script src="scripts/shared/directives.js"></script>
         <script src="scripts/shared/localize.js"></script>
         <script src="scripts/shared/logger.js"></script>
@@ -129,7 +138,6 @@
 
         <script src="scripts/home/home.js"></script>
         <script src="scripts/home/home_add.js"></script>
-        <script src="scripts/home/home_open.js"></script>
         <script src="scripts/home/home_invite.js"></script>
         <script src="scripts/home/home_edit.js"></script>
         <script src="scripts/home/bot.js"></script>
@@ -141,6 +149,7 @@
         <script src="scripts/mission/mission_member_add.js"></script>
         <script src="scripts/mission/mission_invite.js"></script>
         <script src="scripts/mission/mission_attach.js"></script>
+        <script src="scripts/mission/mission_emoticon.js"></script>
 
         <script src="scripts/task/task_list.js"></script>
         <script src="scripts/task/task_edit.js"></script>
@@ -149,7 +158,7 @@
 
         <script src="scripts/chatroom/chatroom.js"></script>
         <script src="scripts/chatroom/chat_star.js"></script>
-        <script src="scripts/chatroom/chat_search.js"></script>                
+        <script src="scripts/chatroom/chat_search.js"></script>              
         <!-- endbuild -->
     </body>
 </html>
