サーバーの負荷問題の解決（memcahedの利用）

--- a/source/app/client/index.html
+++ b/source/app/client/index.html
@@ -97,6 +97,7 @@
 
         <!-- build:js({.tmp,client}) scripts/app.js -->
         <script src="scripts/shared/api.js"></script>
+        <script src="scripts/shared/cache.js"></script>
         <script src="scripts/shared/dateutil.js"></script>
         <script src="scripts/shared/storage.js"></script>
         <script src="scripts/shared/auth.js"></script>
