--- a/source/phonegap/www/index.html
+++ b/source/phonegap/www/index.html
@@ -37,6 +37,7 @@
 
         <script src="js/shared/consts.js"></script>
         <script src="js/shared/api.js"></script>
+        <script src="js/shared/cache.js"></script>
         <script src="js/shared/auth.js"></script>
         <script src="js/shared/chat.js"></script>
         <script src="js/shared/logger.js"></script>
