--- a/source/app/client/index.html
+++ b/source/app/client/index.html
@@ -60,7 +60,7 @@
 
         <!-- build:js scripts/ui.js -->
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
         <script src="bower_components/jquery-spinner/dist/jquery.spinner.min.js"></script>
         <script src="bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
         <script src="bower_components/toastr/toastr.min.js"></script>
@@ -89,6 +89,7 @@
         <script src="js/dropzone/dropzone.min.js"></script>
         <script src="js/ng-websocket/ng-websocket.js"></script>
         <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
+        <script src="js/tutpop.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/config.js -->
